# plotlot-v2

./: .env.example  .gitattributes  .gitignore  .vercelignore  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  compose.yaml  firestore.rules  package-lock.json  pyproject.toml  render.yaml
apps/plotlot/: .dockerignore  .env.example  .railwayignore  Makefile  PlotLot_v2_Architecture.docx  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
apps/plotlot/alembic/: env.py
apps/plotlot/alembic/versions/: 001_initial_schema.py  002_add_unique_constraint_for_upsert.py  003_add_report_cache.py  005_add_lineage_and_state_fields.py  006_add_user_subscriptions.py  007_add_workspace_harness_tables.py
apps/plotlot/dagster/: pyproject.toml  workspace.yaml
apps/plotlot/data/golden/: golden_data.json
apps/plotlot/dbt/: profiles.yml.example
apps/plotlot/dbt/plotlot_dbt/: dbt_project.yml
apps/plotlot/docs/: PLOTLOT_TECHNICAL_OVERVIEW.md
apps/plotlot/docs/status/: CURRENT_STATE.md  runtime-status.json
apps/plotlot/frontend/: .vercelignore  CHATBOT_UX_RESEARCH.md  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
apps/plotlot/frontend/src/: proxy.ts
apps/plotlot/frontend/tests/: DISTINGUISHED_E2E_REPORT.md  VC_READINESS_E2E_REPORT.md  agent-chat-seamless.spec.ts  agent-edit-prompt.spec.ts  agent-live-tools.spec.ts  agent-message-actions.spec.ts  agent-scroll-to-bottom.spec.ts  agent-stop-generating.spec.ts  agent.db.spec.ts  analyze-console.spec.ts  cross-mode.spec.ts  design-system.spec.ts  helpers.ts  lookup.db.spec.ts  municipalities.spec.ts  municipality-coverage.spec.ts  mutation.spec.ts  uat-phase6b.spec.ts  uat.spec.ts  vc-readiness.no-db.spec.ts
apps/plotlot/legacy_docs/: PLOTLOT_HOW_IT_ACTUALLY_WORKS.md
apps/plotlot/scripts/: check_repo_hygiene.py  ci_eval_gate.py  generate_plotlot_story.py  login_with_codex_oauth.sh  run_backend_with_codex_oauth.sh  setup_google_auth.py
apps/plotlot/src/plotlot/: __init__.py  cli.py  config.py
apps/plotlot/tests/: conftest.py
apps/plotlot/tests/eval/: conftest.py  nc_golden_data.py  scorers.py  test_eval_offline.py  test_eval_scorers.py  test_nc_eval.py
apps/plotlot/tests/gold/: ordinance_search_cases.jsonl  router_cases.jsonl  zoning_research_cases.jsonl
apps/plotlot/tests/integration/: test_hub_live.py
apps/plotlot/tests/unit/: test_api.py  test_chat_live_tools.py  test_clause_engine.py  test_clause_schema.py  test_cli_harness.py  test_comps.py  test_deprecations.py  test_discovery.py  test_documents_api.py  test_eval_flow.py  test_field_mapper.py  test_harness_api.py  test_harness_foundation.py  test_harness_router.py  test_harness_runtime.py  test_hub_discovery.py  test_injection_guard.py  test_llm.py  test_lookup.py  test_mcp_api.py  test_mecklenburg.py  test_observability.py  test_openai_auth.py  test_proforma_pipeline.py  test_property.py  test_property_type.py  test_repo_hygiene.py  test_scraper.py  test_sheets_renderer.py  test_skill_registry.py  test_startup.py
plotlot/: .env.example  .gitignore  CLAUDE.md  How_I_Built_PlotLot.docx  Makefile  mlruns.db  plotlot_tmp_mlflow.db  pyproject.toml
plotlot/.omx/plans/: prd-agentic-land-use-harness.md  test-spec-agentic-land-use-harness.md  test-spec-plotlot-workspace-harness.md
plotlot/alembic/versions/: 004_add_portfolio_entries.py
plotlot/dagster/: pyproject.toml  workspace.yaml
plotlot/dagster/dagster_project/: jobs.py
plotlot/dagster/dagster_project/assets/: __init__.py  dbt_assets.py  ingestion.py
plotlot/dbt/plotlot_dbt/models/: sources.yml
plotlot/docs/architecture/: agentic-land-use-harness.md
plotlot/docs/connector-contracts/: opendata-arcgis-socrata.md  workspace-connectors.md
plotlot/docs/prd/: 2026-04-30-agentic-research-trace.md  README.md  agentic-land-use-harness-executive-summary.md
plotlot/docs/runbooks/: tdd-local-success.md
plotlot/docs/status/: manual-zoning-qa-matrix-2026-04-26.md
plotlot/docs/superpowers/specs/: 2026-03-14-agent-ux-research.md  2026-03-14-sidebar-chat-history-design.md
plotlot/frontend/: CHATGPT_UX_RESEARCH.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
plotlot/frontend/src/: proxy.ts
plotlot/frontend/src/app/: SidebarLayout.tsx  globals.css  layout.tsx  page.tsx
plotlot/frontend/src/components/: AddressAutocomplete.tsx  AnalysisStream.tsx  ArcGISParcelMap.tsx  BuildingRenderViewer.tsx  CapabilityChips.tsx  DealHeroCard.tsx  DealTypeSelector.tsx  DensityBreakdown.tsx  DevelopmentConceptCard.tsx  DocumentCanvas.tsx  DocumentGenerator.tsx  InputBar.tsx  (+23 more)
plotlot/frontend/tests/: DISTINGUISHED_E2E_REPORT.md  VC_READINESS_E2E_REPORT.md  cross-mode.spec.ts  design-system.spec.ts  e2e-screenshots.spec.ts  e2e-visual.spec.ts  harness-lifecycle.db.spec.ts  helpers.ts  municipality-coverage.spec.ts  mutation.spec.ts  smoke.no-db.spec.ts  uat-phase6b.spec.ts  uat.spec.ts  vc-readiness.no-db.spec.ts  workspace-routes.no-db.spec.ts
plotlot/legacy_docs/: ML_LLMOPS_LIFECYCLE_PHASES.md
plotlot/logs/runner/: .health-parse.tmp
plotlot/scripts/: run_eval.py  run_live_agent_e2e.sh  setup_phase2.sh  verify_local_success.sh
plotlot/scripts/status/: healthcheck.sh  watchdog.sh
plotlot/src/plotlot/: config.py
plotlot/tests/eval/: nc_golden_data.py  test_eval_live.py  test_eval_offline.py  test_nc_eval.py
plotlot/tests/golden/: land_use_cases.json
plotlot/tests/unit/: test_agent_tool_policy.py  test_analyses_api.py  test_api.py  test_billing.py  test_chat_live_tools.py  test_deal_summary_gen.py  test_evidence_api.py  test_floorplan.py  test_geocode.py  test_geometry.py  test_harness_runtime.py  test_health.py  test_land_use_evidence_models.py  test_llm.py  test_mcp_api.py  test_pipeline.py  test_property.py  test_property_providers.py  test_psa_gen.py  test_status_scripts.py  test_tier2_intelligence.py  test_tools_api.py  test_tracing.py  test_universal_provider.py  test_workspace_harness_storage_models.py  test_xlsx_renderer.py
plotlot/|/: PLOTLOT_PHASE1_IMPLEMENTATION.md  github_profile_README.md
(+708 files in other folders)
